src/test/deca/context/invalid/personalTests/int_to_float.deca
{
    int d = 1.0 + 2;
}